add mercury, bump to 180 chars

--- a/src/html.html
+++ b/src/html.html
@@ -4,5 +4,10 @@
   </body>
   <!-- padding -->
   <!-- padding -->
-  <!-- padding -->
+  <!-- padding12 -->
+  <!-- 67 -->
+  <!-- 67 -->
+  <!-- 67 -->
+  <!-- 67 -->
+  <!-- 67 -->
 </html>
